Fix: fixed text align in dropdowns

--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -4,6 +4,7 @@
 
 .dropdown-item {
     border-radius: 5px;
+    text-align: center;
 }
 
 .dropdown-item.active,
